add composer lock

--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,7 @@
     }
   ],
   "minimum-stability": "alpha",
-  "require": {},
-  "config": {
-    "platform": {
-      "php": "7.4"
-    }
+  "require": {
+    "php": ">=7.4"
   }
 }
